<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74CACACA"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity"
    android:id="@+id/detailActivity">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_button" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="Caroline"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLocalisation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="50 rue ..."
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="..."
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewInternet"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="..."
                android:textSize="15dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLocalisation"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_location" />

        <ImageView
            android:id="@+id/imageViewTelephone"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="105dp"
            android:src="@drawable/ic_phone" />

        <ImageView
            android:id="@+id/imageViewInternet"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_internet" />

        <ImageView
            android:id="@+id/ligne"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="58dp"
            android:src="@drawable/horizontal_line" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAboutMeTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center_vertical"
                android:text="@string/about_me_label"/>

            <ImageView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:src="@drawable/horizontal_line" />

            <TextView
                android:id="@+id/textViewAboutMe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="..." />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#F1EEEE"
        app:fabCustomSize="60dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        app:srcCompat="@drawable/ic_star_border_white_24dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>